--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "animated-scroll-to": "^2.2.0",
+    "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.3",
     "pnotify": "^5.2.0"
   }
